# Simple-projects---python

./: README.md
Flask/: app.py  login.html  perfil.html
Flask/CSR/: app.py
Flask/CSR/static/: script.js
Flask/CSR/templates/: index.html
Flask/ex01/: pyproject.toml
Flask/ex02-tesla/: app.py  pyproject.toml
Flask/ex02-tesla/static/css/: form.css
Flask/ex02-tesla/templates/: form.html  index.html  sobre.html
Python/: calculator.py  criar_senha.py  imc.py  tentativas.py  verificar_senha.py
